# tabplexer2

./: README.md  pyproject.toml  requirements.txt
tabplexer/: __init__.py  __main__.py  manager.py  ui.py
